singularity 3.6.2 (new formula)

--- a/.github/workflows/tests-linux.yml
+++ b/.github/workflows/tests-linux.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     paths:
       - "Formula/libseccomp.rb"
+      - "Formula/singularity.rb"
 jobs:
   tests_linux:
     runs-on: ubuntu-latest
