--- a/.github/workflows/dispatch-build-bottle.yml
+++ b/.github/workflows/dispatch-build-bottle.yml
@@ -28,6 +28,7 @@ env:
   HOMEBREW_GITHUB_ACTIONS: 1
   HOMEBREW_NO_AUTO_UPDATE: 1
   HOMEBREW_CHANGE_ARCH_TO_ARM: 1
+  HOMEBREW_GIT_PATH: /usr/bin/git
   HOMEBREW_RELOCATE_RPATHS: 1
 
 jobs:
