--- a/audit_exceptions/github_prerelease_allowlist.json
+++ b/audit_exceptions/github_prerelease_allowlist.json
@@ -5,5 +5,6 @@
   "polynote": "0.4.5",
   "riff": "0.5.0",
   "telegram-cli": "1.3.1",
-  "thrift@0.9": "all"
+  "thrift@0.9": "all",
+  "go": "1.20rc1"
 }
