ddqa 0.3.1 (new formula)
remove comments

update test for ddqa

ddqa: update test

Co-authored-by: Carlo Cabrera <30379873+carlocab@users.noreply.github.com>

ddqa: update test

Co-authored-by: Carlo Cabrera <30379873+carlocab@users.noreply.github.com>

ddqa: remove test file

ddqa: update test

Signed-off-by: Rui Chen <rui@chenrui.dev>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -206,6 +206,9 @@
   "datasette": {
     "exclude_packages": ["six", "PyYAML", "typing-extensions"]
   },
+  "ddqa": {
+    "exclude_packages": ["pillow", "Pygments", "typing-extensions"]
+  },
   "detect-secrets": {
     "exclude_packages": ["PyYAML"]
   },
